--- a/win32/util/util.vcxproj.in
+++ b/win32/util/util.vcxproj.in
@@ -61,7 +61,7 @@
       <AdditionalDependencies>@LIBNAME@;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>if exist @DEBUGDLLPATH@ copy @DEBUGDLLPATH ..\@PLATFORMDIR@$(Configuration)</Command>
+      <Command>if exist @DEBUGDLLPATH@ copy @DEBUGDLLPATH@ ..\@PLATFORMDIR@$(Configuration)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|@PLATFORM@'">
@@ -84,7 +84,7 @@
       <AdditionalDependencies>@LIBNAME@;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>if exist @DLLPATH@ copy @DLLPATH ..\@PLATFORMDIR@$(Configuration)</Command>
+      <Command>if exist @DLLPATH@ copy @DLLPATH@ ..\@PLATFORMDIR@$(Configuration)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
